presentation: fixed buttons shift

--- a/presentation/style/landing.css
+++ b/presentation/style/landing.css
@@ -132,26 +132,11 @@ body {
 }
 #buttonHolder {
   position: fixed;
-  left: 40%;
   z-index: 9;
   text-align: center;
+  margin: auto;
   bottom: 4%;
-  display: table-row;
-}
-#scrollText {
-  display: table-cell;
-}
-#sourcecode {
-  display: table-cell;
-}
-#landingButton {
-  display: table-cell;
-  opacity: 1.0 !important;
-  filter: alpha(opacity=100) !important;
-  /* For IE8 and earlier */
-}
-#landingButton:focus {
-  outline: none;
+  width: 100%;
 }
 #staticButton {
   position: fixed;
